force-app/main/default/objects/DEL_RECON_Accelerator__c/DEL_RECON_Accelerator__c.object-meta.xml
<CustomObject>
    <description>RECON Accelerator</description>
    <label>RECON Accelerator</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>RECON Accelerator Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RECON Accelerator</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>