force-app/main/default/objects/DEL_RECON_Accelerator__c/fields/Column_Number__c.field-meta.xml
<CustomField>
    <fullName>Column_Number__c</fullName>
    <description>Column Number in which query is placed</description>
    <inlineHelpText>Please enter the Column Number in which query is placed. Start count will be 1.</inlineHelpText>
    <label>Query Column Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>