force-app/main/default/objects/DEL_RECON_Accelerator__c/fields/Perform_Source_Target_Delta__c.field-meta.xml
<CustomField>
    <fullName>Perform_Source_Target_Delta__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this only if you want system to perform source vs target delta</inlineHelpText>
    <label>Perform Source Target Delta?</label>
    <type>Checkbox</type>
</CustomField>