force-app/main/default/objects/DEL_RECON_Accelerator__c/fields/Source_Count_Column_Number__c.field-meta.xml
<CustomField>
    <fullName>Source_Count_Column_Number__c</fullName>
    <description>Please enter the Column Number in which Source Counts are placed. Start count will be 1.</description>
    <label>Source Count Column Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>